programs_for_backend_entries/test_files/search_daily_error/test_input_daily_errors.txt
2020-04-01 03:00:19,995 [main] session-id=[] user-id=[] robot-name=[] INFO d.f.iais.roberta.main.ServerStarter - server started at http://0.0.0.0:1999
2020-04-01 03:00:20,539 [qtp917819120-1380] session-id=[4642] user-id=[-1] robot-name=[calliope2017NoBlue] INFO d.f.i.r.j.r.a.controller.ClientUser - command is: createUser
2020-04-01 03:00:21,841 [qtp917819120-1362] session-id=[] user-id=[] robot-name=[] INFO d.f.i.r.j.r.a.controller.ClientPing - suppressed now 794200 DbcKeyExceptions. Last message was: invalid init token
2020-04-01 03:00:21,877 [qtp917819120-17] session-id=[] user-id=[] robot-name=[] ERROR d.f.i.r.j.r.a.c.ClientProgramController - Exception. Error ticket: E-1
de.fhg.iais.roberta.util.dbc.DbcKeyException: invalid init token
	at de.fhg.iais.roberta.util.UtilForREST.validateInitToken(UtilForREST.java:93)
	at de.fhg.iais.roberta.util.UtilForREST.handleRequestInit(UtilForREST.java:60)
	at de.fhg.iais.roberta.javaServer.restServices.all.controller.ClientProgramController.saveProgram(ClientProgramController.java:68)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at com.sun.jersey.spi.container.JavaMethodInvokerFactory$1.invoke(JavaMethodInvokerFactory.java:60)
	at com.sun.jersey.server.impl.model.method.dispatch.AbstractResourceMethodDispatchProvider$ResponseOutInvoker._dispatch(AbstractResourceMethodDispatchProvider.java:205)
	at com.sun.jersey.server.impl.model.method.dispatch.ResourceJavaMethodDispatcher.dispatch(ResourceJavaMethodDispatcher.java:75)
	at com.sun.jersey.server.impl.uri.rules.HttpMethodRule.accept(HttpMethodRule.java:302)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.ResourceClassRule.accept(ResourceClassRule.java:108)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.RootResourceClassesRule.accept(RootResourceClassesRule.java:84)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1542)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1473)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1419)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1409)
	at com.sun.jersey.spi.container.servlet.WebComponent.service(WebComponent.java:409)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:558)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:733)
	at javax.servlet.http.HttpServlet.service(HttpServlet.java:790)
	at com.google.inject.servlet.ServletDefinition.doServiceImpl(ServletDefinition.java:290)
	at com.google.inject.servlet.ServletDefinition.doService(ServletDefinition.java:280)
	at com.google.inject.servlet.ServletDefinition.service(ServletDefinition.java:184)
	at com.google.inject.servlet.ManagedServletPipeline.service(ManagedServletPipeline.java:89)
	at com.google.inject.servlet.FilterChainInvocation.doFilter(FilterChainInvocation.java:85)
	at com.google.inject.servlet.ManagedFilterPipeline.dispatch(ManagedFilterPipeline.java:120)
	at com.google.inject.servlet.GuiceFilter.doFilter(GuiceFilter.java:133)
	at org.eclipse.jetty.servlet.ServletHandler$CachedChain.doFilter(ServletHandler.java:1610)
	at org.eclipse.jetty.servlet.ServletHandler.doHandle(ServletHandler.java:540)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.session.SessionHandler.doHandle(SessionHandler.java:1701)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.handler.ContextHandler.doHandle(ContextHandler.java:1345)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:203)
	at org.eclipse.jetty.servlet.ServletHandler.doScope(ServletHandler.java:480)
	at org.eclipse.jetty.server.session.SessionHandler.doScope(SessionHandler.java:1668)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:201)
	at org.eclipse.jetty.server.handler.ContextHandler.doScope(ContextHandler.java:1247)
	at org.eclipse.jetty.server.handler.ScopedHandler.handle(ScopedHandler.java:144)
	at org.eclipse.jetty.server.handler.HandlerList.handle(HandlerList.java:61)
	at org.eclipse.jetty.server.handler.HandlerWrapper.handle(HandlerWrapper.java:132)
	at org.eclipse.jetty.server.Server.handle(Server.java:502)
	at org.eclipse.jetty.server.HttpChannel.handle(HttpChannel.java:370)
	at org.eclipse.jetty.server.HttpConnection.onFillable(HttpConnection.java:267)
	at org.eclipse.jetty.io.AbstractConnection$ReadCallback.succeeded(AbstractConnection.java:305)
	at org.eclipse.jetty.io.FillInterest.fillable(FillInterest.java:103)
	at org.eclipse.jetty.io.ChannelEndPoint$2.run(ChannelEndPoint.java:117)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.runTask(EatWhatYouKill.java:333)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.doProduce(EatWhatYouKill.java:310)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.tryProduce(EatWhatYouKill.java:168)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.run(EatWhatYouKill.java:126)
	at org.eclipse.jetty.util.thread.ReservedThreadExecutor$ReservedThread.run(ReservedThreadExecutor.java:366)
	at org.eclipse.jetty.util.thread.QueuedThreadPool.runJob(QueuedThreadPool.java:765)
	at org.eclipse.jetty.util.thread.QueuedThreadPool$2.run(QueuedThreadPool.java:683)
	at java.lang.Thread.run(Thread.java:748)
2020-04-01 03:00:22,233 [qtp917819120-1378] session-id=[2773] user-id=[-1] robot-name=[ev3lejosv0] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[ERR ]] Client connection issue: 0
2020-04-01 03:00:22,111 [qtp917819120-400] session-id=[451] user-id=[-1] robot-name=[calliope2017NoBlue] ERROR d.f.i.r.syntax.lang.expr.EvalExpr - rule stack: [expression]-> line 1:3 at [@1,3:3='a',<21>,1:3]: mismatched input 'a' expecting {<EOF>, '?', '&&', '||', '==', '!=', '>', '<', '>=', '<=', '%', '^', '*', '/', '+', '-'}
2020-04-01 03:00:23,233 [qtp917819120-1378] session-id=[2773] user-id=[-1] robot-name=[ev3lejosv0] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[ERR ]] Client connection issue: 0
2020-04-01 03:00:24,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:24,173 [qtp917819120-369] session-id=[298] user-id=[-1] robot-name=[calliope2017NoBlue] ERROR d.f.i.r.w.CalliopeCompilerWorker - compile calliope2017NoBlue program NEPOprog failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, [1/3] Building the NEPOprog.
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h: In member function 'virtual ble_error_t ServiceDiscovery::reset()':
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:148:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  148 |         matchingServiceUUID        = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:150:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  150 |         matchingCharacteristicUUID = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp: In function 'int main()':
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:19: error: expected ';' before '___Zufall'
   56 |     ___Zufall == 0
      |                   ^
      |                   ;
   57 |     ___Zufall == 0
      |     ~~~~~~~~~      
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:15: warning: statement has no effect [-Wunused-value]
   56 |     ___Zufall == 0
      |     ~~~~~~~~~~^~~~
Error in building !!!)
2020-04-01 03:00:25,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:26,242 [qtp917819120-414] session-id=[687] user-id=[77257] robot-name=[edison] ERROR d.f.i.r.worker.EdisonCompilerWorker - compile edison program EdisonR6 failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, ERR: file:0:: Syntax Error, Ed.TuneString only allowed at the top level)
2020-04-01 03:00:27,233 [qtp917819120-469] session-id=[1000] user-id=[-1] robot-name=[uno] ERROR d.f.i.r.r.RobotCommunicationData - ROBOT_RCD: user approval arrived, but is not expected. State is: ROBOT_WAITING_FOR_PUSH_FROM_SERVER. Last request was scheduled 3 secs ago
2020-04-01 03:00:28,813 [qtp917819120-507] session-id=[1015] user-id=[-1] robot-name=[ev3lejosv1] ERROR d.f.i.r.p.AbstractProcessor - error message missing. Returning server error.
2020-04-01 03:00:29,366 [qtp917819120-507] session-id=[1055] user-id=[-1] robot-name=[uno] ERROR d.f.i.r.r.RobotCommunicationData - ROBOT_RCD: user approval arrived, but is not expected. State is: ROBOT_WAITING_FOR_PUSH_FROM_SERVER. Last request was scheduled 4 secs ago
2020-04-01 03:00:30,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:31,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:32,634 [qtp917819120-517] session-id=[] user-id=[] robot-name=[] ERROR d.f.i.r.j.p.JAXBProviderFactory - marshaller not valid for type com.sun.research.ws.wadl.Application
2020-04-01 03:00:33,884 [qtp917819120-581] session-id=[1405] user-id=[76134] robot-name=[nano] ERROR d.f.i.r.j.r.a.controller.ClientUser - Invalid command: login
2020-04-01 03:00:33,488 [qtp917819120-558] session-id=[1321] user-id=[77213] robot-name=[nxt] ERROR d.f.i.r.worker.NxtCompilerWorker - compile nxt program schwarz failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, # Error: ';' expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" +
#----------------------------------------------------------
# Error: Math Factor expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" += "";
#----------------------------------------------------------
# Error: ';' expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" += "";
#----------------------------------------------------------)
2020-04-01 12:09:20,730 [qtp917819120-592] session-id=[1321] user-id=[77213] robot-name=[nxt] ERROR d.f.i.r.worker.NxtCompilerWorker - compile nxt program schwarz failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, # Error: ';' expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" +
#----------------------------------------------------------
# Error: Math Factor expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" += "";
#----------------------------------------------------------
# Error: ';' expected
File "/tmp/openrobertaTmp/VAR451YV/schwarz/target/schwarz.nxc" ; line 28
#    "autsch" += "";
#----------------------------------------------------------)
2020-04-01 03:00:34,014 [qtp917819120-590] session-id=[] user-id=[] robot-name=[] ERROR d.f.i.r.j.r.robot.RobotCommand - ROBOT_PROTOCOL: robot was already disconnected, when a /pushcmd for token VAR451YV terminated. We return a server error
2020-04-01 03:00:35,710 [qtp917819120-591] session-id=[1312] user-id=[77776] robot-name=[calliope2017] ERROR d.f.i.r.persistence.dao.ProgramDao - update was requested, timestamps don't match. Has another user updated the program in the meantime?
2020-04-01 03:00:36,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:37,772 [qtp917819120-681] session-id=[1894] user-id=[-1] robot-name=[ev3lejosv1] ERROR d.f.i.r.p.AbstractProcessor - error message missing. Returning server error.
2020-04-01 03:00:38,774 [qtp917819120-681] session-id=[1894] user-id=[-1] robot-name=[ev3lejosv1] ERROR d.f.i.r.j.r.a.controller.ClientUser - Exception. Error ticket: E-46
java.lang.NullPointerException: null
	at de.fhg.iais.roberta.persistence.AbstractProcessor.succeeded(AbstractProcessor.java:83)
	at de.fhg.iais.roberta.util.UtilForREST.addResultInfo(UtilForREST.java:111)
	at de.fhg.iais.roberta.javaServer.restServices.all.controller.ClientUser.isResetPasswordLinkExpired(ClientUser.java:402)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at com.sun.jersey.spi.container.JavaMethodInvokerFactory$1.invoke(JavaMethodInvokerFactory.java:60)
	at com.sun.jersey.server.impl.model.method.dispatch.AbstractResourceMethodDispatchProvider$ResponseOutInvoker._dispatch(AbstractResourceMethodDispatchProvider.java:205)
	at com.sun.jersey.server.impl.model.method.dispatch.ResourceJavaMethodDispatcher.dispatch(ResourceJavaMethodDispatcher.java:75)
	at com.sun.jersey.server.impl.uri.rules.HttpMethodRule.accept(HttpMethodRule.java:302)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.ResourceClassRule.accept(ResourceClassRule.java:108)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.RootResourceClassesRule.accept(RootResourceClassesRule.java:84)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1542)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1473)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1419)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1409)
	at com.sun.jersey.spi.container.servlet.WebComponent.service(WebComponent.java:409)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:558)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:733)
	at javax.servlet.http.HttpServlet.service(HttpServlet.java:790)
	at com.google.inject.servlet.ServletDefinition.doServiceImpl(ServletDefinition.java:290)
	at com.google.inject.servlet.ServletDefinition.doService(ServletDefinition.java:280)
	at com.google.inject.servlet.ServletDefinition.service(ServletDefinition.java:184)
	at com.google.inject.servlet.ManagedServletPipeline.service(ManagedServletPipeline.java:89)
	at com.google.inject.servlet.FilterChainInvocation.doFilter(FilterChainInvocation.java:85)
	at com.google.inject.servlet.ManagedFilterPipeline.dispatch(ManagedFilterPipeline.java:120)
	at com.google.inject.servlet.GuiceFilter.doFilter(GuiceFilter.java:133)
	at org.eclipse.jetty.servlet.ServletHandler$CachedChain.doFilter(ServletHandler.java:1610)
	at org.eclipse.jetty.servlet.ServletHandler.doHandle(ServletHandler.java:540)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.session.SessionHandler.doHandle(SessionHandler.java:1701)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.handler.ContextHandler.doHandle(ContextHandler.java:1345)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:203)
	at org.eclipse.jetty.servlet.ServletHandler.doScope(ServletHandler.java:480)
	at org.eclipse.jetty.server.session.SessionHandler.doScope(SessionHandler.java:1668)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:201)
	at org.eclipse.jetty.server.handler.ContextHandler.doScope(ContextHandler.java:1247)
	at org.eclipse.jetty.server.handler.ScopedHandler.handle(ScopedHandler.java:144)
	at org.eclipse.jetty.server.handler.HandlerList.handle(HandlerList.java:61)
	at org.eclipse.jetty.server.handler.HandlerWrapper.handle(HandlerWrapper.java:132)
	at org.eclipse.jetty.server.Server.handle(Server.java:502)
	at org.eclipse.jetty.server.HttpChannel.handle(HttpChannel.java:370)
	at org.eclipse.jetty.server.HttpConnection.onFillable(HttpConnection.java:267)
	at org.eclipse.jetty.io.AbstractConnection$ReadCallback.succeeded(AbstractConnection.java:305)
	at org.eclipse.jetty.io.FillInterest.fillable(FillInterest.java:103)
	at org.eclipse.jetty.io.ChannelEndPoint$2.run(ChannelEndPoint.java:117)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.runTask(EatWhatYouKill.java:333)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.doProduce(EatWhatYouKill.java:310)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.tryProduce(EatWhatYouKill.java:168)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.run(EatWhatYouKill.java:126)
	at org.eclipse.jetty.util.thread.ReservedThreadExecutor$ReservedThread.run(ReservedThreadExecutor.java:366)
	at org.eclipse.jetty.util.thread.QueuedThreadPool.runJob(QueuedThreadPool.java:765)
	at org.eclipse.jetty.util.thread.QueuedThreadPool$2.run(QueuedThreadPool.java:683)
	at java.lang.Thread.run(Thread.java:748)
2020-04-01 03:00:39,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:40,995 [qtp917819120-734] session-id=[1944] user-id=[-1] robot-name=[ev3lejosv0] ERROR d.f.iais.roberta.components.Project - Transformer failed
de.fhg.iais.roberta.util.dbc.DbcException: Could not invoke method jaxbToAst for block robLocalVariables_declare with fields VAR x TYPE  
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.invokeMethod(Jaxb2ProgramAst.java:93)
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.invokeJaxbToAstTransform(Jaxb2ProgramAst.java:67)
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.blockToAST(Jaxb2ProgramAst.java:57)
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.instanceToAST(Jaxb2ProgramAst.java:50)
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.transform(Jaxb2ProgramAst.java:40)
	at de.fhg.iais.roberta.util.jaxb.JaxbHelper.generateProgramTransformer(JaxbHelper.java:115)
	at de.fhg.iais.roberta.components.Project$Builder.transformProgram(Project.java:366)
	at de.fhg.iais.roberta.components.Project$Builder.build(Project.java:352)
	at de.fhg.iais.roberta.javaServer.restServices.all.controller.ProjectWorkflowRestController.getSimulationVMCode(ProjectWorkflowRestController.java:105)
	at sun.reflect.GeneratedMethodAccessor17.invoke(Unknown Source)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at com.sun.jersey.spi.container.JavaMethodInvokerFactory$1.invoke(JavaMethodInvokerFactory.java:60)
	at com.sun.jersey.server.impl.model.method.dispatch.AbstractResourceMethodDispatchProvider$ResponseOutInvoker._dispatch(AbstractResourceMethodDispatchProvider.java:205)
	at com.sun.jersey.server.impl.model.method.dispatch.ResourceJavaMethodDispatcher.dispatch(ResourceJavaMethodDispatcher.java:75)
	at com.sun.jersey.server.impl.uri.rules.HttpMethodRule.accept(HttpMethodRule.java:302)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.ResourceClassRule.accept(ResourceClassRule.java:108)
	at com.sun.jersey.server.impl.uri.rules.RightHandPathRule.accept(RightHandPathRule.java:147)
	at com.sun.jersey.server.impl.uri.rules.RootResourceClassesRule.accept(RootResourceClassesRule.java:84)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1542)
	at com.sun.jersey.server.impl.application.WebApplicationImpl._handleRequest(WebApplicationImpl.java:1473)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1419)
	at com.sun.jersey.server.impl.application.WebApplicationImpl.handleRequest(WebApplicationImpl.java:1409)
	at com.sun.jersey.spi.container.servlet.WebComponent.service(WebComponent.java:409)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:558)
	at com.sun.jersey.spi.container.servlet.ServletContainer.service(ServletContainer.java:733)
	at javax.servlet.http.HttpServlet.service(HttpServlet.java:790)
	at com.google.inject.servlet.ServletDefinition.doServiceImpl(ServletDefinition.java:290)
	at com.google.inject.servlet.ServletDefinition.doService(ServletDefinition.java:280)
	at com.google.inject.servlet.ServletDefinition.service(ServletDefinition.java:184)
	at com.google.inject.servlet.ManagedServletPipeline.service(ManagedServletPipeline.java:89)
	at com.google.inject.servlet.FilterChainInvocation.doFilter(FilterChainInvocation.java:85)
	at com.google.inject.servlet.ManagedFilterPipeline.dispatch(ManagedFilterPipeline.java:120)
	at com.google.inject.servlet.GuiceFilter.doFilter(GuiceFilter.java:133)
	at org.eclipse.jetty.servlet.ServletHandler$CachedChain.doFilter(ServletHandler.java:1610)
	at org.eclipse.jetty.servlet.ServletHandler.doHandle(ServletHandler.java:540)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.session.SessionHandler.doHandle(SessionHandler.java:1701)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextHandle(ScopedHandler.java:255)
	at org.eclipse.jetty.server.handler.ContextHandler.doHandle(ContextHandler.java:1345)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:203)
	at org.eclipse.jetty.servlet.ServletHandler.doScope(ServletHandler.java:480)
	at org.eclipse.jetty.server.session.SessionHandler.doScope(SessionHandler.java:1668)
	at org.eclipse.jetty.server.handler.ScopedHandler.nextScope(ScopedHandler.java:201)
	at org.eclipse.jetty.server.handler.ContextHandler.doScope(ContextHandler.java:1247)
	at org.eclipse.jetty.server.handler.ScopedHandler.handle(ScopedHandler.java:144)
	at org.eclipse.jetty.server.handler.HandlerList.handle(HandlerList.java:61)
	at org.eclipse.jetty.server.handler.HandlerWrapper.handle(HandlerWrapper.java:132)
	at org.eclipse.jetty.server.Server.handle(Server.java:502)
	at org.eclipse.jetty.server.HttpChannel.handle(HttpChannel.java:370)
	at org.eclipse.jetty.server.HttpConnection.onFillable(HttpConnection.java:267)
	at org.eclipse.jetty.io.AbstractConnection$ReadCallback.succeeded(AbstractConnection.java:305)
	at org.eclipse.jetty.io.FillInterest.fillable(FillInterest.java:103)
	at org.eclipse.jetty.io.ChannelEndPoint$2.run(ChannelEndPoint.java:117)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.runTask(EatWhatYouKill.java:333)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.doProduce(EatWhatYouKill.java:310)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.tryProduce(EatWhatYouKill.java:168)
	at org.eclipse.jetty.util.thread.strategy.EatWhatYouKill.run(EatWhatYouKill.java:126)
	at org.eclipse.jetty.util.thread.ReservedThreadExecutor$ReservedThread.run(ReservedThreadExecutor.java:366)
	at org.eclipse.jetty.util.thread.QueuedThreadPool.runJob(QueuedThreadPool.java:765)
	at org.eclipse.jetty.util.thread.QueuedThreadPool$2.run(QueuedThreadPool.java:683)
	at java.lang.Thread.run(Thread.java:748)
Caused by: de.fhg.iais.roberta.util.dbc.DbcException: Invalid variable type: 
	at de.fhg.iais.roberta.typecheck.BlocklyType.get(BlocklyType.java:108)
	at de.fhg.iais.roberta.syntax.lang.expr.VarDeclaration.jaxbToAst(VarDeclaration.java:151)
	at sun.reflect.GeneratedMethodAccessor42.invoke(Unknown Source)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at de.fhg.iais.roberta.transformer.Jaxb2ProgramAst.invokeMethod(Jaxb2ProgramAst.java:75)
	... 62 common frames omitted
2020-04-01 03:00:42,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:43,173 [qtp917819120-369] session-id=[298] user-id=[-1] robot-name=[calliope2017NoBlue] INFO d.f.i.r.c.AbstractCompilerWorkflow - compilation of program failed with message: 
[1/3] Building the NEPOprog.
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h: In member function 'virtual ble_error_t ServiceDiscovery::reset()':
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:148:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  148 |         matchingServiceUUID        = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:150:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  150 |         matchingCharacteristicUUID = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp: In function 'int main()':
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:19: error: expected ';' before '___Zufall'
   56 |     ___Zufall == 0
      |                   ^
      |                   ;
   57 |     ___Zufall == 0
      |     ~~~~~~~~~      
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:15: warning: statement has no effect [-Wunused-value]
   56 |     ___Zufall == 0
      |     ~~~~~~~~~~^~~~
Error in building !!!
2020-04-01 03:00:44,173 [qtp917819120-369] session-id=[298] user-id=[-1] robot-name=[calliope2017NoBlue] ERROR d.f.i.r.w.CalliopeCompilerWorker - compile calliope2017NoBlue program NEPOprog failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, [1/3] Building the NEPOprog.
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h: In member function 'virtual ble_error_t ServiceDiscovery::reset()':
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:148:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  148 |         matchingServiceUUID        = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattClient.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:23,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/ServiceDiscovery.h:150:77: warning: implicitly-declared 'UUID& UUID::operator=(const UUID&)' is deprecated [-Wdeprecated-copy]
  150 |         matchingCharacteristicUUID = UUID::ShortUUIDBytes_t(BLE_UUID_UNKNOWN);
      |                                                                             ^
In file included from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattService.h:20,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/GattServer.h:21,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/BLE.h:22,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /opt/ora-cc-rsc/RobotMbed/libs2017//microbit/inc/MicroBit.h:69,
                 from /tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:3:
/opt/ora-cc-rsc/RobotMbed/libs2017//ble/ble/UUID.h:164:5: note: because 'UUID' has user-provided 'UUID::UUID(const UUID&)'
  164 |     UUID(const UUID &source) {
      |     ^~~~
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp: In function 'int main()':
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:19: error: expected ';' before '___Zufall'
   56 |     ___Zufall == 0
      |                   ^
      |                   ;
   57 |     ___Zufall == 0
      |     ~~~~~~~~~      
/tmp/openrobertaTmp/_2a_NkLa4K_5/NEPOprog/source/NEPOprog.cpp:56:15: warning: statement has no effect [-Wunused-value]
   56 |     ___Zufall == 0
      |     ~~~~~~~~~~^~~~
Error in building !!!)
2020-04-01 03:00:46,319 [qtp917819120-1380] session-id=[4645] user-id=[-1] robot-name=[ev3lejosv1] INFO d.fhg.iais.roberta.util.ClientLogger - log entry: [[INFO]] init gallery list view
2020-04-01 03:00:47,950 [qtp917819120-955] session-id=[2594] user-id=[62646] robot-name=[nano] ERROR d.f.i.r.w.c.ArduinoCompilerWorker - compile nano program FahrenGrundlagenundUltraschallsensor failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, /tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedLeft(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:11:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:12:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:14:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:15:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)255 + ___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedRight(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:21:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:22:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:24:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:25:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)255 + ___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void loop()':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:35: error: '_trigger_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                   ^~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: error: '_echo_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: note: suggested alternative: 'memchr_P'
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
                                               memchr_P
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:12: error: '_getUltrasonicDistance' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
            ^~~~~~~~~~~~~~~~~~~~~~
exit status 1)
2020-04-01 03:00:48,491 [qtp917819120-949] session-id=[2594] user-id=[62646] robot-name=[nano] ERROR d.f.i.r.w.c.ArduinoCompilerWorker - compile nano program FahrenGrundlagenundUltraschallsensor failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, /tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedLeft(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:11:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:12:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:14:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:15:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)255 + ___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedRight(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:21:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:22:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:24:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:25:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)255 + ___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void loop()':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:35: error: '_trigger_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                   ^~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: error: '_echo_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: note: suggested alternative: 'memchr_P'
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
                                               memchr_P
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:12: error: '_getUltrasonicDistance' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
            ^~~~~~~~~~~~~~~~~~~~~~
exit status 1)
2020-04-01 17:35:48,004 [qtp917819120-933] session-id=[3079] user-id=[-1] robot-name=[nxt] ERROR d.f.i.r.syntax.lang.expr.EvalExpr - rule stack: [expression]-> line 1:3 at [@1,3:3='a',<21>,1:3]: mismatched input 'a' expecting {<EOF>, '?', '&&', '||', '==', '!=', '>', '<', '>=', '<=', '%', '^', '*', '/', '+', '-'}
2020-04-01 17:37:54,053 [qtp917819120-953] session-id=[2594] user-id=[62646] robot-name=[nano] ERROR d.f.i.r.w.c.ArduinoCompilerWorker - compile nano program FahrenGrundlagenundUltraschallsensor failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, /tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedLeft(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:11:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:12:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:14:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:15:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)255 + ___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedRight(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:21:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:22:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:24:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:25:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)255 + ___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void loop()':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:35: error: '_trigger_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                   ^~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: error: '_echo_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: note: suggested alternative: 'memchr_P'
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
                                               memchr_P
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:12: error: '_getUltrasonicDistance' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
            ^~~~~~~~~~~~~~~~~~~~~~
exit status 1)
2020-04-01 03:00:49,220 [qtp917819120-972] session-id=[2594] user-id=[62646] robot-name=[nano] ERROR d.f.i.r.w.c.ArduinoCompilerWorker - compile nano program FahrenGrundlagenundUltraschallsensor failed with (COMPILERWORKFLOW_ERROR_PROGRAM_COMPILE_FAILED, /tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedLeft(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:11:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:12:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:14:22: error: '_output_ML_Richtung' was not declared in this scope
         digitalWrite(_output_ML_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:15:21: error: '_output_ML_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_ML_Geschwindigkeit, (int)255 + ___SpeedLeft);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void setSpeedRight(double)':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:21:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)0);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:22:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:24:22: error: '_output_MR_Richtung' was not declared in this scope
         digitalWrite(_output_MR_Richtung, (int)1);
                      ^~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:25:21: error: '_output_MR_Geschwindigkeit' was not declared in this scope
         analogWrite(_output_MR_Geschwindigkeit, (int)255 + ___SpeedRight);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino: In function 'void loop()':
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:35: error: '_trigger_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                   ^~~~~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: error: '_echo_U' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:47: note: suggested alternative: 'memchr_P'
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
                                               ^~~~~~~
                                               memchr_P
/tmp/openrobertaTmp/CNPEY2U3/FahrenGrundlagenundUltraschallsensor/source/FahrenGrundlagenundUltraschallsensor.ino:36:12: error: '_getUltrasonicDistance' was not declared in this scope
     if ( ( _getUltrasonicDistance(_trigger_U, _echo_U) < 20 ) && ( _getUltrasonicDistance(_trigger_U, _echo_U) > 10 ) ) {
            ^~~~~~~~~~~~~~~~~~~~~~
exit status 1)
2020-04-02 03:00:19,995 [main] session-id=[] user-id=[] robot-name=[] INFO d.f.iais.roberta.main.ServerStarter - server started at http://0.0.0.0:1999